# npp-qt

./: .dockerignore  .gitignore  AGENTS.md  AGENT_PROGRESS.md  AUDIT.md  AboutDlg.h  AutoCompletion.h  Buffer.h  CHANGELOG.md  CMakeLists.txt  CODEMAP.md  CONTRIBUTING.md  ColumnEditorDlg.h  DocTabView.cpp  DocTabView.h  Dockerfile  DockingCont.cpp  FileManager.h  FindReplaceDlg.h  GAP_REGISTER.md  GoToLineDlg.h  HEARTBEAT.md  LocalizationSwitcher.h  Macro.h  Makefile  NativeLangSpeaker.h  Notepad_plus.cpp  Notepad_plus.h  NppDarkMode.h  NppXml.h  PLATFORM_ADAPTERS.md  Parameters.h  PluginInterface.h  PluginsManager.cpp  PluginsManager.h  README.md  RELEASE_NOTES_v0.1.1.md  SEMANTIC_LIFT_MAP.md  SI_VALIDATION_REPORT.md  SKILL-powering-on.md  (+36 more)
npp-qt/: CMakeLists.txt  SEMANTIC_LIFT_MAP.md  npp-qt
npp-qt-old-mixed/src/: AutoCompletion.cpp  AutoCompletion.h  Buffer.cpp  Buffer.h  CMakeLists.txt  Common.cpp  DocTabView.h  DockingManager.h  EncodingMapper.cpp  FileNameStringSplitter.h  FindReplaceDlg.cpp  IconLoader.cpp  MainWindow.cpp  MainWindow.h  MiniDumper.h  Notepad_plus.cpp  Notepad_plus.h  Notepad_plus_msgs.h  NppBigSwitch.cpp  NppBigSwitch.h  NppCommands.cpp  NppCommands.h  NppCommandsSlots_stub.cpp  NppConstants.h  NppDarkMode.cpp  NppDarkMode.h  NppData.h  NppIO.h  NppNotification.cpp  NppNotification.h  NppSciCompat.h  Parameters.cpp  Parameters.h  Printer.h  Processus.h  ReadFileChanges.h  RunDlg.cpp  RunMacroDlg.h  Scintilla.h  ScintillaComponent.cpp  (+22 more)
npp-qt/src/: AboutDlg.h  AutoCompletion.cpp  AutoCompletion.h  Buffer.cpp  Buffer.h  Common.cpp  ContextMenu.h  DocTabView.h  EncodingMapper.cpp  EncodingMapper.h  FileNameStringSplitter.cpp  FindReplaceDlg.cpp  FindReplaceDlg.h  FunctionCallTip.cpp  FunctionCallTip.h  GoToLineDlg.cpp  IconLoader.cpp  IconLoader.h  Lexilla.h  MainWindow.cpp  MainWindow.h  Notepad_plus.h  Notepad_plus_msgs.h  NppBigSwitch.cpp  NppBigSwitch.h  NppCommands.cpp  NppCommands.h  NppCommandsSlots_stub.cpp  NppConstants.h  NppDarkMode.cpp  NppDarkMode.h  NppIO.cpp  NppNotification.cpp  NppNotification.h  NppSciCompat.h  NppTextCodec.h  NppXml.h  Parameters.cpp  Parameters.h  PluginsManager.h  (+38 more)
npp-qt/tests/: CMakeLists.txt  TestColourPicker.cpp  TestDirectoryWatcher.cpp  TestLesDlgs.cpp  TestPluginsManager.cpp
src/: Application.cpp  AutoCompletion.cpp  AutoCompletion.h  Buffer.cpp  Buffer.h  CMakeLists.txt  ClipboardHistoryPanel.cpp  Common.cpp  ContextMenu.h  DocTabView.cpp  DocTabView.h  DockingCont.h  EncodingMapper.cpp  FileBrowserPanel.cpp  FileNameStringSplitter.cpp  FileNameStringSplitter.h  FindCharsInRange.h  FindReplaceDialog.cpp  FindReplaceDlg.cpp  FindReplaceDlg.h  FunctionCallTip.cpp  FunctionCallTip.h  FunctionListPanel.cpp  GoToLineDlg.cpp  GoToLineDlg.h  LastRecentFileList.cpp  MainWindow.cpp  MainWindow.h  MenuBar.cpp  NativeLangSpeaker.cpp  Notepad_plus.cpp  Notepad_plus.h  Notepad_plus_Window.cpp  Notepad_plus_Window.h  Notepad_plus_msgs.h  NppBigSwitch.cpp  NppBigSwitch.h  NppCommands.cpp  NppCommands.cpp.bak  NppCommands.h  (+79 more)
src/DarkMode/: DarkMode.cpp  DarkMode.h  IatHook.h  UAHMenuBar.h
src/MISC/: FileNameStringSplitter.h
src/ScintillaComponent/: AutoCompletion.cpp  AutoCompletion.h  Buffer.cpp  Buffer.h  ColumnEditorDlg.h  DocTabView.cpp  DocTabView.h  DocumentPeeker.h  FileManager.cpp  FindCharsInRange.cpp  FindCharsInRange.h  FindReplaceDlg.cpp  FindReplaceDlg.h  FindReplaceDlg_rc.h  FunctionCallTip.cpp  FunctionCallTip.h  GoToLineDlg.cpp  GoToLineDlg.h  Printer.cpp  Printer.h  ScintillaCtrls.cpp  ScintillaCtrls.h  ScintillaEditView.cpp  ScintillaEditView.h  SmartHighlighter.cpp  SmartHighlighter.h  UserDefineDialog.cpp  UserDefineDialog.h  UserDefineResource.h  colors.h  columnEditor.cpp  columnEditor.h  columnEditor_rc.h  xmlMatchedTagsHighlighter.cpp  xmlMatchedTagsHighlighter.h
src/WinControls/: AboutDlg.cpp  AboutDlg.h  AnsiCharPanel.cpp  AnsiCharPanel.h  ClipboardHistory.cpp  ClipboardHistory.h  ColourPicker.cpp  ColourPicker.h  ContextMenu.cpp  ContextMenu.h  CustomFileDialog.cpp  CustomFileDialog.h  DockingWnd.cpp  DockingWnd.h  DocumentMap.cpp  DocumentMap.h  DoubleBuffer.cpp  FileBrowser.cpp  FileBrowser.h  FindCharsInRange.cpp  FindCharsInRange.h  FunctionList.cpp  FunctionList.h  ImageListSet.cpp  ImageListSet.h  PluginsAdmin.cpp  PluginsAdmin.h  Preference.cpp  Preference.h  ProjectPanel.cpp  ProjectPanel.h  ReadDirectoryChanges.cpp  ReadDirectoryChanges.h  RunMacroDlg.cpp  RunMacroDlg.h  ShortcutMapper.cpp  ShortcutMapper.h  SizeableDlg.cpp  SplitterContainer.cpp  SplitterContainer.h  (+27 more)
src/common/: ClipboardAdapter.cpp  ClipboardAdapter.h  Constants.h  DpiManager.cpp  DpiManager.h  DpiManager.h_parameters  FileHelper.cpp  FileHelper.h  FileWatcherAdapter.cpp  FileWatcherAdapter.h  MenuAdapter.cpp  MenuAdapter.h  NonCopyable.h  Observer.h  PathHelper.cpp  PathHelper.h  ScintillaComponent.h  ShortcutAdapter.cpp  ShortcutAdapter.h  StringHelper.cpp  StringHelper.h  Types.h  UrlHelper.cpp  UrlHelper.h  Util.cpp  Util.h
src/core/: Application.cpp  Application.h  Buffer.cpp  Buffer.h  EditorCommandManager.cpp  EditorCommandManager.h  EncodingDetector.cpp  EncodingDetector.h  EncodingMapper.cpp  EncodingMapper.h  EncodingUtils.cpp  EncodingUtils.h  FileManager.cpp  FileManager.h  LanguageManager.cpp  LanguageManager.h  MacroAction.cpp  MacroAction.h  MacroManager.cpp  MacroManager.h  Notepad_plus.cpp  Notepad_plus.h  NppBigSwitch.cpp  NppBigSwitch.h  NppCommands.cpp  NppCommands.h  NppIO.cpp  NppIO.h  NppNotificationHandler.cpp  NppSciNotificationBridge.cpp  (+18 more)
tests/: CMakeLists.txt  README.md  TestColourPicker.cpp  TestCustomFileDialog.cpp  TestDialogs.cpp  TestDialogs.cpp.deprecated  TestEncodingDetector.cpp  TestEncodingDetector.cpp.deprecated  TestFileHelper.cpp  TestImageListSet.cpp  TestLesDlgs.cpp  TestLexer.cpp  TestLexer.cpp.deprecated  TestMain.cpp  TestNppDarkMode.cpp  TestStatusBar.cpp  TestStatusBar.cpp.deprecated  TestStringHelper.cpp  TestStringHelper.cpp.deprecated  TestUtf8_16.cpp  integration_editor_test.cpp.deprecated  integration_test.cpp  startup_test.cpp  startup_test.cpp.deprecated
(+940 files in other folders)
